--- a/jenkins/service.yaml
+++ b/jenkins/service.yaml
@@ -14,3 +14,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+      name: jenkins
+    - port: 50000
+      targetPort: 50000
+      name: jenkins-agent
